--- a/style.css
+++ b/style.css
@@ -7597,8 +7597,7 @@ a.text-dark:hover, a.text-dark:focus {
 html {
   margin-top: 0;
   min-height: 100%;
-  position: relative;
-  overflow-x: hidden; }
+  position: relative; }
   html body {
     position: relative; }
   html #page-container {
@@ -7613,16 +7612,15 @@ html {
           padding-bottom: 53rem; } }
 
 .main-wrap {
-  min-height: 100%;
-  overflow-x: hidden; }
+  min-height: 100%; }
 
 main {
   overflow-y: auto; }
 
-body, main {
-  overflow-x: hidden;
-  font-family: "Roboto", sans-serif; }
+body, body, main, #page-container, #content-wrap, .main-wrap {
+  overflow-x: hidden; }
 
+html,
 .row:before, .row:after {
   display: table-row !important; }
 
